Add Sealed Classes Support (JEP 360/397/409) (#29)
* Clean up bytecode version handling

* Add support for sealed classes